# Finesse

./: README.md  modules.xml  settings.gradle  workspace.xml
app/: build.gradle
app/src/main/cpp/: .gitignore  CMakeLists.txt  api.c  core.c  core.h  jni.c  key_value_store.c  key_value_store.h  lbs.h  reader.c  test.c
caches/: build_file_checksums.ser
libraries/: Gradle__androidx_activity_activity_1_0_0_aar.xml  Gradle__androidx_appcompat_appcompat_1_1_0_aar.xml  Gradle__androidx_appcompat_appcompat_resources_1_1_0_aar.xml  Gradle__androidx_arch_core_core_runtime_2_0_0_aar.xml  Gradle__androidx_cardview_cardview_1_0_0_aar.xml  Gradle__androidx_constraintlayout_constraintlayout_1_1_3_aar.xml  Gradle__androidx_coordinatorlayout_coordinatorlayout_1_1_0_aar.xml  Gradle__androidx_core_core_1_2_0_aar.xml  Gradle__androidx_core_core_ktx_1_2_0_aar.xml  Gradle__androidx_cursoradapter_cursoradapter_1_0_0_aar.xml  Gradle__androidx_customview_customview_1_0_0_aar.xml  Gradle__androidx_drawerlayout_drawerlayout_1_0_0_aar.xml  Gradle__androidx_fragment_fragment_1_1_0_aar.xml  Gradle__androidx_interpolator_interpolator_1_0_0_aar.xml  Gradle__androidx_lifecycle_lifecycle_livedata_2_0_0_aar.xml  Gradle__androidx_lifecycle_lifecycle_livedata_core_2_0_0_aar.xml  Gradle__androidx_lifecycle_lifecycle_runtime_2_1_0_aar.xml  Gradle__androidx_lifecycle_lifecycle_viewmodel_2_1_0_aar.xml  Gradle__androidx_loader_loader_1_0_0_aar.xml  Gradle__androidx_recyclerview_recyclerview_1_1_0_aar.xml  Gradle__androidx_savedstate_savedstate_1_0_0_aar.xml  Gradle__androidx_test_core_1_2_0_aar.xml  (+12 more)
(+44 files in other folders)
